# video-editor

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: __main__.py
src/package/: main.py
src/ui/: __init__.py
src/utils/: __init__.py
src/video/logic/: __init__.py  editor.py  video.py
