[project]
name = "clip-gif-cli"
version = "0.1.0"
description = "A CLI tool for working with clips and GIFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "typed-ffmpeg>=3.6",
 "typer>=0.19.2",
]

[project.scripts]
clip-gif-cli = "package.main:app"

[dependency-groups]
dev = ["pytest", "ruff", "pyrefly", "pre-commit", "typed-ffmpeg[graph]>=3.6"]


[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']

[tool.ruff]
line-length = 88
target-version = "py313"
